FIX: letterspacing not on collapse headlines

--- a/src/AppBundle/Resources/scss/collapse.scss
+++ b/src/AppBundle/Resources/scss/collapse.scss
@@ -5,6 +5,7 @@
     margin: $default-margin 0;
     font-family: $font-family-default;
     font-size: $font-size-h3;
+    letter-spacing: normal;
   }
 }
 
